--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	diff = auto
 	status = auto
 	branch = auto
+	ui = true
 [core]
 	excludesfile = /Users/haeky/.gitignore
 	editor = vim
@@ -17,3 +18,5 @@
 	pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
 [push]
 	default = matching
+[pull]
+	rebase = true
