--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,12 @@
 set-option -g base-index 1
 setw -g pane-base-index 1
 
+# Neovim
+set -sg escape-time 0
+
+# DevUp
+set -g default-command "reattach-to-user-namespace -l zsh"
+
 # Set Ctrl + a
 unbind C-b
 set-option -g prefix C-a
