Temporarily fix neovim on Spin

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ setw -g pane-base-index 1
 set -sg escape-time 0
 
 # DevUp
-set -g default-command "reattach-to-user-namespace -l zsh"
+# set -g default-command "reattach-to-user-namespace -l zsh"
 
 # Set Ctrl + a
 unbind C-b
