--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,37 @@
+# set -g default-terminal "tmux-256color"
+
 # Start window index of 1
 set-option -g base-index 1
 setw -g pane-base-index 1
 
-# Neovim
-set -sg escape-time 0
-
-# DevUp
-# set -g default-command "reattach-to-user-namespace -l zsh"
+# Use zsh
+set-option -g default-shell /bin/zsh
 
 # Set Ctrl + a
 unbind C-b
 set-option -g prefix C-a
+
+run ~/.tmux/plugins/catppuccin/catppuccin.tmux
+
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Catppucin configuration
+set -g @catppuccin_flavor 'macchiato' 
+set -g @catppuccin_window_status_style "slanted"
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+set -g @catppuccin_window_current_text " #{window_name}"
+set -g @catppuccin_window_text " #{window_name}"
 
 # Keybinding
 bind C-a last-window
@@ -18,5 +39,5 @@ bind k kill-pane
 bind | split-window -h
 bind - split-window
 
-# Default configuration
-set -g default-terminal "screen-256color"
+# Initialize Tmux Plugin Manager
+run ~/.tmux/plugins/tpm/tpm
