Update configuration for neovim on Linux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
-# set -g default-terminal "tmux-256color"
+set -g mouse on
+set -g default-terminal "tmux-256color"
 
 # Start window index of 1
 set-option -g base-index 1
@@ -11,8 +12,6 @@ set-option -g default-shell /bin/zsh
 unbind C-b
 set-option -g prefix C-a
 
-run ~/.tmux/plugins/catppuccin/catppuccin.tmux
-
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'
@@ -20,7 +19,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Catppucin configuration
 set -g @catppuccin_flavor 'macchiato' 
-set -g @catppuccin_window_status_style "slanted"
+set -g @catppuccin_window_status_style "basic"
+
+run ~/.tmux/plugins/catppuccin/catppuccin.tmux
 
 set -g status-right-length 100
 set -g status-left-length 100
@@ -30,8 +31,8 @@ set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
-set -g @catppuccin_window_current_text " #{window_name}"
-set -g @catppuccin_window_text " #{window_name}"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_text " #W"
 
 # Keybinding
 bind C-a last-window
