Move window renaming in tmux.conf

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -20,6 +20,8 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 # Catppucin configuration
 set -g @catppuccin_flavor 'macchiato' 
 set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_window_current_text " #{window_name}"
+set -g @catppuccin_window_text " #{window_name}"
 
 run ~/.tmux/plugins/catppuccin/catppuccin.tmux
 
@@ -30,9 +32,6 @@ set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
-
-set -g @catppuccin_window_current_text " #W"
-set -g @catppuccin_window_text " #W"
 
 # Keybinding
 bind C-a last-window
